force-app/main/default/objects/Agreement__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <label>Billing Address</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>