force-app/main/default/objects/Agreement__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>Billing City</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>