force-app/main/default/objects/Agreement__c/fields/Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code__c</fullName>
    <label>Billing Zip Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>