force-app/main/default/objects/Agreement__c/recordTypes/Acquisition_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Acquisition_Assignment</fullName>
    <active>true</active>
    <description>Customer assignment cosigned by customers and acquired business.</description>
    <label>Acquisition Assignment</label>
</RecordType>