force-app/main/default/objects/Agreement__c/recordTypes/CSA.recordType-meta.xml
<RecordType>
    <fullName>CSA</fullName>
    <active>true</active>
    <description>Legacy Digital Realty Colocation Service Agreement.</description>
    <label>CSA</label>
</RecordType>