force-app/main/default/objects/Agreement__c/recordTypes/MLSA.recordType-meta.xml
<RecordType>
    <fullName>MLSA</fullName>
    <active>true</active>
    <description>Master Agreement that only applies to a specific property.</description>
    <label>MLSA</label>
</RecordType>