force-app/main/default/objects/Agreement__c/recordTypes/MSA.recordType-meta.xml
<RecordType>
    <fullName>MSA</fullName>
    <active>true</active>
    <description>Master Service Agreement</description>
    <label>MSA</label>
</RecordType>