force-app/main/default/objects/Agreement__c/recordTypes/UMLSA.recordType-meta.xml
<RecordType>
    <fullName>UMLSA</fullName>
    <active>true</active>
    <description>Universal Master Agreement applies to all properties.</description>
    <label>UMLSA</label>
</RecordType>