force-app/main/default/objects/Agreement__c/listViews/ActiveAgreements.listView-meta.xml
<ListView>
    <fullName>ActiveAgreements</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Description__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Active Agreements</label>
</ListView>